content/ops-manager/v6.0/source/reference/api/snapshots/change-expiry-for-one-snapshot.txt
.. meta::
   :robots: noindex, nosnippet 

=================================
Change the Expiry of One Snapshot
=================================

.. default-domain:: mongodb

.. contents:: On this page
   :local:
   :backlinks: none
   :depth: 2
   :class: singlecol

.. include:: /includes/api/fact-api-access-list-required.rst

.. include:: /includes/api/base-api-uri.rst

Resource
--------

.. code-block:: http

   PATCH /groups/{PROJECT-ID}/clusters/{CLUSTER-ID}/snapshots/{SNAPSHOT-ID}

Request Parameters
------------------

Request Path Parameters
~~~~~~~~~~~~~~~~~~~~~~~

.. list-table::
   :widths: 10 10 80
   :header-rows: 1
   :stub-columns: 1

   * - Name
     - Type
     - Description

   * - PROJECT-ID
     - string
     - Unique identifier of the :opsmgr:`project </reference/glossary/#std-term-project>` that owns the :manual:`snapshot </reference/glossary/#std-term-snapshot>`.

   * - CLUSTER-ID
     - string
     - Unique identifier of the cluster that the :manual:`snapshot </reference/glossary/#std-term-snapshot>` represents.

   * - SNAPSHOT-ID
     - string
     - Unique identifier of the :manual:`snapshot </reference/glossary/#std-term-snapshot>`.

Request Query Parameters
~~~~~~~~~~~~~~~~~~~~~~~~

.. include:: /includes/api/no-query-single-parameters.rst

Request Body Parameters
~~~~~~~~~~~~~~~~~~~~~~~

.. list-table::
   :widths: 10 10 80
   :header-rows: 1
   :stub-columns: 1

   * - Name
     - Type
     - Description

   * - doNotDelete
     - boolean
     - Indicator that the snapshot cannot be deleted.

       .. important::
          You cannot set ``doNotDelete`` to ``true`` *and* set a
          timestamp for ``expires`` in the same request. If you do,
          |mms| returns an error: ``Cannot modify snapshot because of
          invalid fields.``

   * - expires
     - timestamp
     - The date in `ISO 8601
       <https://en.wikipedia.org/wiki/ISO_8601?oldid=793821205>`_ date
       and time format at :abbr:`UTC (Coordinated Universal Time)` after
       which this snapshot can be deleted.

       If ``doNotDelete`` is set to ``true``, any existing value in
       ``expires`` is removed.

       If ``expires`` is set to a timestamp at or before the current
       date and time, |mms| deletes the snapshot at its next
       opportunity. There is no guarantee that the snapshot would be
       deleted immediately.

       If the current ``expires`` timestamp has already passed, it
       cannot be edited.

Response
--------

.. include:: /includes/api/list-tables/snapshot-rs-documents.rst

``links`` Array
~~~~~~~~~~~~~~~

The ``links`` array includes one or more links to sub-resources and/or
related resources. The relations between URLs are explained in the `Web
Linking Specification <http://tools.ietf.org/html/rfc5988>`_

.. list-table::
   :header-rows: 1

   * - Relation
     - Description
   * - self
     - The URL endpoint for this resource.

Example Request
---------------

.. code-block:: sh
   :emphasize-lines: 6-9

   curl --user "{PUBLIC-KEY}:{PRIVATE-KEY}" --digest \
    --header "Accept: application/json" \
    --header "Content-Type: application/json" \
    --include \
    --request PATCH "https://{opsManagerHost}:{port}/api/public/v1.0/groups/{PROJECT-ID}/clusters/{CLUSTER-ID}/snapshots/{SNAPSHOT-ID}?pretty=true" \
    --data '
    {
      "doNotDelete": true
    }'

Example Response
~~~~~~~~~~~~~~~~

Response Header
+++++++++++++++

.. include:: /includes/api/api-headers/401.rst

.. include:: /includes/api/api-headers/200.rst

Response Body
+++++++++++++

.. code-block:: json
   :emphasize-lines: 9

   {
     "id" : "{SNAPSHOT-ID}",
     "CLUSTER-ID" : "{CLUSTER-ID}",
     "complete" : true,
     "created" : {
       "date" : "2014-07-09T15:24:37Z",
       "increment" : 1
     },
     "doNotDelete" : true,
     "GROUP-ID" : "{PROJECT-ID}",
     "lastOplogAppliedTimestamp" : {
       "date" : "2017-08-21T09:14:51Z",
       "increment" : 1
     },
     "links" : [ {
       "href" : "https://{opsManagerHost}:{port}/api/public/v1.0/groups/{PROJECT-ID}/clusters/{CLUSTER-ID}/snapshots/{SNAPSHOT-ID}",
      "rel" : "self"
     } ],
     "namespaceFilterList" : {
       "filterList" : [ ],
       "filterType" : "blacklist"
     },
     "parts" : [ {
       "CLUSTER-ID" : "{CLUSTER-ID}",
       "dataSizeBytes" : 17344,
       "fileSizeBytes" : 67108864,
       "mongodVersion" : "2.6.3",
       "replicaSetName" : "rs0",
       "storageSizeBytes" : 10502144,
       "typeName" : "REPLICA_SET"
     } ],
   }
